--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "npx json-server --watch --port=8000 ./src/json-server/db.json"
+    "server": "npx json-server --watch --port=8000 ./json-server/db.json"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
