--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "npx json-server --watch --port=8000 ./json-server/db.json"
   },
   "dependencies": {
+    "@hugeicons/react-pro": "^0.3.2",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "json-server": "^0.17.4",
